--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -121,6 +121,7 @@ jobs:
         with:
           context: ./${{ matrix.component }}
           push: true
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
           tags: |
             ${{ matrix.registry == 'ghcr' && format('ghcr.io/{0}/{1}:{2}', needs.check-release.outputs.lower_owner, matrix.image_name, needs.check-release.outputs.version) || format('{0}/{1}:{2}', secrets.DOCKER_USERNAME, matrix.image_name, needs.check-release.outputs.version) }}
             ${{ matrix.registry == 'ghcr' && format('ghcr.io/{0}/{1}:latest', needs.check-release.outputs.lower_owner, matrix.image_name) || format('{0}/{1}:latest', secrets.DOCKER_USERNAME, matrix.image_name) }}
