--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       platforms:
         - linux/amd64
         - linux/arm64
+        - linux/arm/v7
     container_name: oj-backend
     restart: always
     depends_on:
